Extract methods
Signed-off-by: Jarno Elovirta <jarno@elovirta.com>